--- a/documents/references.bib
+++ b/documents/references.bib
@@ -1,4 +1,4 @@
-@article{tsai_calibration,
+@article{Tsai1987,
   title={A versatile camera calibration technique for high-accuracy 3D machine vision metrology using off-the-shelf TV cameras and lenses},
   author={Tsai, Roger Y},
   journal={Robotics and Automation, IEEE Journal of},
@@ -27,4 +27,22 @@
   number={5},
   pages={417--429},
   year={1982}
+}
+
+@book{Lewis2007,
+  title={Optimal and robust estimation: with an introduction to stochastic control theory},
+  author={Lewis, Frank L and Xie, Lihua and Popa, Dan},
+  volume={29},
+  year={2007},
+  publisher={CRC press}
+}
+
+@article{Shuster2004,
+  title={Deterministic three-axis attitude determination},
+  author={Shuster, Malcolm D},
+  journal={Journal of Astronautical Sciences},
+  volume={52},
+  number={3},
+  pages={405--419},
+  year={2004}
 }
